--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,9 @@ code {
   text-align: center;
   margin-bottom: 15px;
 }
+
+.bar-chart-container {
+  height: 600px;
+  margin-top: 30px !important;
+  margin-bottom: 30px;
+}
