--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,21 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .app {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-  justify-content: flex-start;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
-.App-dark, .App-light {
+.App-dark,
+.App-light {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -25,46 +26,46 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
 }
 
 .footer {
-  width: 100%;
-  text-align: center;
+    width: 100%;
+    text-align: center;
 }
 
 .tier-toggle-btn {
-  box-shadow: none !important;
-  padding: 8px 5px !important;
+    box-shadow: none !important;
+    padding: 8px 5px !important;
 }
 
 .toggle-style {
-  width: 100%;
-  text-align: center;
-  margin-bottom: 15px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 15px;
 }
 
 .bar-chart-container {
-  height: 600px;
-  margin-top: 30px !important;
-  margin-bottom: 30px;
+    height: 600px;
+    margin-top: 30px !important;
+    margin-bottom: 30px;
 }
 
 .bar-chart-container-mobile {
-  height: 400px;
-  margin-top: 30px !important;
-  margin-bottom: 30px;
+    height: 400px;
+    margin-top: 30px !important;
+    margin-bottom: 30px;
 }
 
 .three-card-col {
-  margin: 20px 5px 30px 5px;
+    margin: 20px 5px 30px 5px;
 }
 
 .centered {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* .account-form {
@@ -74,23 +75,28 @@ code {
 } */
 
 .nav-styles {
-    position: -webkit-sticky; /* For Safari */
+    position: -webkit-sticky;
+    /* For Safari */
     position: sticky;
-    top: 0; /* Set to the top of the viewport */
-    z-index: 1000; /* Ensure the header is above other content */
+    top: 0;
+    /* Set to the top of the viewport */
+    z-index: 1000;
+    /* Ensure the header is above other content */
     margin-bottom: 50px;
 }
-  
+
 .icon {
     color: #4f616c;
 }
 
 .App-light {
     background-color: #eeeeee;
+
     .nav-styles {
         background-color: #dddddd;
         border-bottom: 1px solid #374249;
     }
+
     .footer {
         background-color: #dddddd;
     }
@@ -101,6 +107,7 @@ code {
         background-color: #282B2F;
         border-bottom: 1px solid #374249;
     }
+
     .footer {
         background-color: #282B2F;
     }
