--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,6 +66,11 @@ code {
     flex: 1;
 }
 
+.custom-dropdown .dropdown-menu {
+    max-height: 500px;
+    overflow-y: scroll;
+}
+
 .loading-container {
     display: flex;
     justify-content: center;
